styled the sidebar compomnent

--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -41,6 +41,15 @@
     object-fit: cover;
 }
 
+.sidebar__stats {
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid lightgray;
+    background-color: white;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
 .sidebar__stat {
     margin-top: 10px;
     display: flex;
@@ -51,15 +60,6 @@
     color: gray;
     font-size: 13px;
     font-weight: 600;
-}
-
-.sidebar__stats {
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid lightgray;
-    background-color: white;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
 }
 
 .sidebar__statNumber {
@@ -74,4 +74,31 @@
     background-color: white;
     border-radius: 10px;
     margin-top: 10px;
+}
+
+.sidebar__bottom > p {
+    font-size: 13px;
+    padding-bottom: 10px;
+}
+
+.sidebar__recentItem {
+    display: flex;
+    font-size: 13px;
+    color: gray;
+    font-weight: bolder;
+    cursor: pointer;
+    margin-bottom: 5px;
+    padding: 5px;
+}
+
+.sidebar__recentItem:hover {
+    background-color: whitesmoke;
+    border-radius: 10px;
+    cursor: pointer;
+    color: black;
+}
+
+.sidebar__hash {
+    margin-right: 10px;
+    margin-left: 5px;
 }
